@@ -4,18 +4,19 @@ package cn.tannn.jdevelops.knife4j.domain;
 import cn.tannn.jdevelops.knife4j.core.entity.SwaggerSecurityScheme;
 import io.swagger.v3.oas.models.security.SecurityScheme;
 import org.springframework.boot.context.properties.ConfigurationProperties;
+import org.springframework.boot.context.properties.NestedConfigurationProperty;
 
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import static cn.tannn.jdevelops.knife4j.core.constant.PublicConstant.SWAGGER_HEADER_HANDER;
 
 
 /**
  * swagger配置类
+ *
  * @author tn
  * @version 1
  * @date 2020/6/19 9:56
@@ -71,30 +72,38 @@ public class SwaggerProperties {
     private String licenseUrl;
 
     /**
-     *  分组 必须英文 e.g jdevelopsAPI
+     * 分组 必须英文 e.g jdevelopsAPI
      */
     private String groupName;
 
     /**
-     *  分组名
+     * 分组名
      */
     private String displayName;
 
     /**
-     *  OpenAPI 规范的安全方案
-     *  默认apikey,且name等于token
+     * OpenAPI 规范的安全方案
+     * 默认apikey,且name等于token
      */
     private List<SwaggerSecurityScheme> swaggerSecuritySchemes;
 
     /**
      * 是否设置默认的 securityScheme ，true 要设置
      * <p>
-     *     优先级在 swaggerSecuritySchemes.security 之下:
-     *      1. 存在 swaggerSecuritySchemes 以swaggerSecuritySchemes.security为准
-     *      2. swaggerSecuritySchemes.security 都是 false 的情况下有效
+     * 优先级在 swaggerSecuritySchemes.security 之下:
+     * 1. 存在 swaggerSecuritySchemes 以swaggerSecuritySchemes.security为准
+     * 2. swaggerSecuritySchemes.security 都是 false 的情况下有效
      * </p>
      */
     private Boolean securitySchemeDefault;
+
+    /**
+     * 控制台配置
+     * <p>swagger控制台输出配置生效，默认true[生效]</p>
+     * <p>占坑 ConsoleConfig 的 ConditionalOnProperty#jdevelops.swagger.console.enabled</p>
+     */
+    @NestedConfigurationProperty
+    private Console console = new Console();
 
 
     @Override
@@ -113,11 +122,12 @@ public class SwaggerProperties {
                 ", displayName='" + displayName + '\'' +
                 ", swaggerSecuritySchemes=" + swaggerSecuritySchemes +
                 ", securitySchemeDefault=" + securitySchemeDefault +
+                ", console=" + console +
                 '}';
     }
 
     public List<String> getBasePackage() {
-        if(Objects.isNull(basePackage)){
+        if (Objects.isNull(basePackage)) {
             return Collections.singletonList("cn.tannn.jdevelops.controller");
         }
         return basePackage;
@@ -129,7 +139,7 @@ public class SwaggerProperties {
 
 
     public String getTitle() {
-        if(Objects.isNull(title)){
+        if (Objects.isNull(title)) {
             return "JdevelopsAPIs";
         }
         return title;
@@ -140,7 +150,7 @@ public class SwaggerProperties {
     }
 
     public String getDescription() {
-        if(Objects.isNull(description)){
+        if (Objects.isNull(description)) {
             return "详细描述";
         }
         return description;
@@ -151,7 +161,7 @@ public class SwaggerProperties {
     }
 
     public String getVersion() {
-        if(Objects.isNull(version)){
+        if (Objects.isNull(version)) {
             return "2.0.8-SNAPSHOT";
         }
         return version;
@@ -162,7 +172,7 @@ public class SwaggerProperties {
     }
 
     public String getAuthor() {
-        if(Objects.isNull(author)){
+        if (Objects.isNull(author)) {
             return "tan";
         }
         return author;
@@ -173,7 +183,7 @@ public class SwaggerProperties {
     }
 
     public String getUrl() {
-        if(Objects.isNull(url)){
+        if (Objects.isNull(url)) {
             return "https://t.tannn.cn/";
         }
         return url;
@@ -184,7 +194,7 @@ public class SwaggerProperties {
     }
 
     public String getEmail() {
-        if(Objects.isNull(email)){
+        if (Objects.isNull(email)) {
             return "1445763190@qq.com";
         }
         return email;
@@ -195,7 +205,7 @@ public class SwaggerProperties {
     }
 
     public String getLicense() {
-        if(Objects.isNull(license)){
+        if (Objects.isNull(license)) {
             return "tan";
         }
         return license;
@@ -206,7 +216,7 @@ public class SwaggerProperties {
     }
 
     public String getLicenseUrl() {
-        if(Objects.isNull(licenseUrl)){
+        if (Objects.isNull(licenseUrl)) {
             return "https://t.tannn.cn/";
         }
         return licenseUrl;
@@ -217,7 +227,7 @@ public class SwaggerProperties {
     }
 
     public String getGroupName() {
-        if(Objects.isNull(groupName)){
+        if (Objects.isNull(groupName)) {
             return "jdevelopsAPI";
         }
         return groupName;
@@ -228,7 +238,7 @@ public class SwaggerProperties {
     }
 
     public String getDisplayName() {
-        if(Objects.isNull(displayName)){
+        if (Objects.isNull(displayName)) {
             return "默认接口组";
         }
         return displayName;
@@ -240,24 +250,24 @@ public class SwaggerProperties {
 
     public List<SwaggerSecurityScheme> getSwaggerSecuritySchemes() {
         // 为空设置默认token
-        if(Objects.isNull(swaggerSecuritySchemes)||swaggerSecuritySchemes.isEmpty()){
-            if(Boolean.TRUE.equals(getSecuritySchemeDefault())){
-                return Collections.singletonList(new SwaggerSecurityScheme( new SecurityScheme()
+        if (Objects.isNull(swaggerSecuritySchemes) || swaggerSecuritySchemes.isEmpty()) {
+            if (Boolean.TRUE.equals(getSecuritySchemeDefault())) {
+                return Collections.singletonList(new SwaggerSecurityScheme(new SecurityScheme()
                         // 类型
                         .type(SecurityScheme.Type.APIKEY)
                         // 请求头的 name
                         .name(SWAGGER_HEADER_HANDER)
                         // token 所在位置
                         .in(SecurityScheme.In.HEADER), true));
-            }else {
+            } else {
                 return new ArrayList<>();
             }
-        }else if(Boolean.TRUE.equals(getSecuritySchemeDefault())) {
+        } else if (Boolean.TRUE.equals(getSecuritySchemeDefault())) {
             //  那 Security == true
-            List<SwaggerSecurityScheme> collect = swaggerSecuritySchemes.stream().filter(SwaggerSecurityScheme::getSecurity).collect(Collectors.toList());
+            List<SwaggerSecurityScheme> collect = swaggerSecuritySchemes.stream().filter(SwaggerSecurityScheme::getSecurity).toList();
             // 设置的都没有效果,那就设置一个默认，（securitySchemeDefault == ture）
-            if(collect.isEmpty()){
-                return Collections.singletonList(new SwaggerSecurityScheme( new SecurityScheme()
+            if (collect.isEmpty()) {
+                return Collections.singletonList(new SwaggerSecurityScheme(new SecurityScheme()
                         // 类型
                         .type(SecurityScheme.Type.APIKEY)
                         // 请求头的 name
@@ -274,7 +284,7 @@ public class SwaggerProperties {
     }
 
     public Boolean getSecuritySchemeDefault() {
-        if(Objects.isNull(securitySchemeDefault)){
+        if (Objects.isNull(securitySchemeDefault)) {
             return true;
         }
         return securitySchemeDefault;
@@ -284,5 +294,40 @@ public class SwaggerProperties {
         this.securitySchemeDefault = securitySchemeDefault;
     }
 
+
+    public Console getConsole() {
+        return console;
+    }
+
+    public void setConsole(Console console) {
+        this.console = console;
+    }
+
+    /**
+     * 内部类表示控制台配置
+     */
+    public static class Console {
+        /**
+         * swagger控制台输出配置生效，默认true[生效]
+         * <p>占坑 ConsoleConfig 的 ConditionalOnProperty#jdevelops.swagger.console.enabled</p>
+         */
+        private Boolean enabled = true;
+
+        // getter and setter
+        public Boolean getEnabled() {
+            return enabled;
+        }
+
+        public void setEnabled(Boolean enabled) {
+            this.enabled = Objects.requireNonNullElse(enabled, true);
+        }
+
+        @Override
+        public String toString() {
+            return "Console{" +
+                    "enabled=" + enabled +
+                    '}';
+        }
+    }
 
 }
